--- a/Cinestar-app/Profil.xaml
+++ b/Cinestar-app/Profil.xaml
@@ -2,11 +2,46 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.Pages.Profil"
-             Title="Profil">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="" >
+    <ScrollView>
+        <VerticalStackLayout Padding="20" Spacing="15">
+
+            <Label Text="PRIJAVI SE"
+                   FontSize="24"
+                   HorizontalOptions="Center" />
+
+            <!-- BUTTONI -->
+            <Button Text="Prijava"
+                   
+                    BackgroundColor="DarkBlue"
+                    TextColor="White"/>
+
+            <Button Text="Registracija"
+                    
+                    BackgroundColor="Gray"
+                    TextColor="White"/>
+
+            <!-- REGISTRACIJA FORMA (sakrivena na početku) -->
+            <VerticalStackLayout x:Name="RegistracijaForma"
+                                 IsVisible="False"
+                                 Spacing="10"
+                                 Margin="0,20,0,0">
+
+                <Label Text="Registracija"
+                       FontSize="20"
+                       HorizontalOptions="Center"/>
+
+                <Entry Placeholder="Ime" />
+                <Entry Placeholder="Prezime" />
+                <Entry Placeholder="Email" Keyboard="Email"/>
+                <Entry Placeholder="Lozinka" IsPassword="True"/>
+                <Entry Placeholder="Potvrdi lozinku" IsPassword="True"/>
+
+                <Button Text="Registruj se"
+                        BackgroundColor="Green"
+                        TextColor="White"/>
+            </VerticalStackLayout>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
