--- a/Cinestar-app/MainPage.xaml
+++ b/Cinestar-app/MainPage.xaml
@@ -3,11 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Cinestar_app.Pages"
              x:Class="Cinestar_app.Pages.MainPage"
-             Title="Home">
+             Title="">
 
     <ScrollView>
-        <StackLayout BackgroundColor="Blue">
-
+        <StackLayout BackgroundColor="#051851">
+            <StackLayout Orientation="Horizontal">
+                <Picker TextColor="White" x:Name="gradoviPicker" ></Picker>
+            </StackLayout>
             <!-- Frame sa slikama -->
             <Frame BackgroundColor="Gray" Margin="0,20">
                 <StackLayout>
