--- a/Cinestar-app/Profil.xaml
+++ b/Cinestar-app/Profil.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.Pages.Profil"
-             Title="Profil">
-    <VerticalStackLayout>
+             Title=""  >
+    <ScrollView >
+        <StackLayout BackgroundColor="#051851">
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    </StackLayout>
+    </ScrollView>
 </ContentPage>
