--- a/Cinestar-app/Profil.xaml
+++ b/Cinestar-app/Profil.xaml
@@ -1,24 +1,21 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.Pages.Profil"
-<<<<<<< HEAD
-             Title="" >
+             Title="">
     <ScrollView>
-        <VerticalStackLayout Padding="20" Spacing="15">
+        <VerticalStackLayout Padding="20" Spacing="15" BackgroundColor="#051851">
 
             <Label Text="PRIJAVI SE"
                    FontSize="24"
-                   HorizontalOptions="Center" />
+                   HorizontalOptions="Center"
+                   TextColor="White" />
 
             <!-- BUTTONI -->
             <Button Text="Prijava"
-                   
                     BackgroundColor="DarkBlue"
                     TextColor="White"/>
 
             <Button Text="Registracija"
-                    
                     BackgroundColor="Gray"
                     TextColor="White"/>
 
@@ -30,13 +27,14 @@
 
                 <Label Text="Registracija"
                        FontSize="20"
-                       HorizontalOptions="Center"/>
+                       HorizontalOptions="Center"
+                       TextColor="White"/>
 
-                <Entry Placeholder="Ime" />
-                <Entry Placeholder="Prezime" />
-                <Entry Placeholder="Email" Keyboard="Email"/>
-                <Entry Placeholder="Lozinka" IsPassword="True"/>
-                <Entry Placeholder="Potvrdi lozinku" IsPassword="True"/>
+                <Entry Placeholder="Ime" TextColor="White"/>
+                <Entry Placeholder="Prezime" TextColor="White"/>
+                <Entry Placeholder="Email" Keyboard="Email" TextColor="White"/>
+                <Entry Placeholder="Lozinka" IsPassword="True" TextColor="White"/>
+                <Entry Placeholder="Potvrdi lozinku" IsPassword="True" TextColor="White"/>
 
                 <Button Text="Registruj se"
                         BackgroundColor="Green"
@@ -44,15 +42,5 @@
             </VerticalStackLayout>
 
         </VerticalStackLayout>
-=======
-             Title=""  >
-    <ScrollView >
-        <StackLayout BackgroundColor="#051851">
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </StackLayout>
->>>>>>> 78713309a46ee98d58ce46e082b8437eb2a0d18f
     </ScrollView>
 </ContentPage>
