--- a/Cinestar-app/SplashScreen.xaml
+++ b/Cinestar-app/SplashScreen.xaml
@@ -5,7 +5,7 @@
              Shell.NavBarIsVisible="False">
 
     <Grid>
-        <Image Source="background.jpg"
+        <Image Source="proba1.jpg."
                Aspect="AspectFill"
                />
 
