--- a/Cinestar-app/MainPage.xaml
+++ b/Cinestar-app/MainPage.xaml
@@ -12,12 +12,17 @@
             <StackLayout BackgroundColor="#051851">
                 <StackLayout Orientation="Horizontal">
                     <Image Source="logo.png"
-          HeightRequest="40"
-          HorizontalOptions="Start"
-          VerticalOptions="Center" />
+                           HeightRequest="50"
+                           Margin="10,10"
+                           HorizontalOptions="Start"
+                           VerticalOptions="Center" />
 
-                    <Picker TextColor="White" x:Name="gradoviPicker" ></Picker>
+                    <Picker TextColor="White" x:Name="gradoviPicker" FontFamily="Arial"></Picker>
                 </StackLayout>
+                <BoxView HeightRequest="1" 
+                         BackgroundColor="#888888" 
+                         HorizontalOptions="FillAndExpand"
+                         Margin="5,5"/>
 
                 <!-- Frame sa slikama -->
                 <Frame BackgroundColor="Gray" Margin="0,20">
@@ -25,8 +30,12 @@
                         <Label Text="SLike"></Label>
                     </StackLayout>
                 </Frame>
+                <BoxView HeightRequest="1" 
+                         BackgroundColor="#888888" 
+                         HorizontalOptions="FillAndExpand"
+                         Margin="5,5"/>
 
-                <Label Text="Na programu" TextTransform="Uppercase"/>
+                <Label Text="Na programu" TextTransform="Uppercase" TextColor="white" Padding="20" FontFamily="Arial"/>
 
                 <Grid>
                     <Grid.ColumnDefinitions>
