--- a/Cinestar-app/SplashScreen.xaml
+++ b/Cinestar-app/SplashScreen.xaml
@@ -19,7 +19,8 @@
                    TextColor="#fff" 
                    FontSize="24"
                    HorizontalOptions="Center"
-                   Opacity="0"/>
+                   Opacity="0"
+                   FontFamily="Arial"/>
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
