--- a/Cinestar-app/Filmovi.xaml
+++ b/Cinestar-app/Filmovi.xaml
@@ -7,6 +7,8 @@
         <Label Text="Filmovi page!" 
                HorizontalOptions="Center" 
                VerticalOptions="Center"/>
+
+            <Button Text="Klikni me" Clicked="IdiNaFIlmDetalji"></Button>
     </StackLayout>
 </ScrollView>
 </ContentPage>
