--- a/Cinestar-app/MainTabbedPage.xaml
+++ b/Cinestar-app/MainTabbedPage.xaml
@@ -6,10 +6,13 @@
     xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
     x:Class="Cinestar_app.Pages.MainTabbedPage"
     android:TabbedPage.ToolbarPlacement="Bottom"
+     BarBackgroundColor="#051851"        
+    BarTextColor="White"  
+    
     >
 
     <TabbedPage.Children>
-        <NavigationPage Title="Pocetna" IconImageSource="home.png">
+        <NavigationPage Title="Pocetna"  IconImageSource="home.png">
             <x:Arguments>
                 <pages:HomePage />
             </x:Arguments>
