--- a/Cinestar-app/CityPickerPage.xaml
+++ b/Cinestar-app/CityPickerPage.xaml
@@ -8,30 +8,28 @@
             <Image Source="logo.png"
                    Margin="30"
                    HeightRequest="90"
-                   HorizontalOptions="Center"
-                   />
+                   HorizontalOptions="Center"/>
             <Label Text="ODABERI GRAD:" TextDecorations="Underline" TextColor="White" HorizontalOptions="Center"/>
             <ListView x:Name="CitiesListView"
-          BackgroundColor="Transparent"
-          SeparatorVisibility="None"
-          RowHeight="70">
+                      BackgroundColor="Transparent"
+                      SeparatorVisibility="None"
+                      RowHeight="70">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout>
-                            <BoxView HeightRequest="1" Color="Gray" HorizontalOptions="FillAndExpand" Margin="0,10"/>
-                            <Label Text="{Binding}" 
-                       FontSize="22"
-                       FontAttributes="Bold"
-                       TextColor="White"
-                       Padding="30,20"
-                       VerticalOptions="Center" />
-                           </StackLayout>
+                                <BoxView HeightRequest="1" Color="Gray" HorizontalOptions="FillAndExpand" Margin="0,10"/>
+                                <Label Text="{Binding}" 
+                                       FontSize="22"
+                                       FontAttributes="Bold"
+                                       TextColor="White"
+                                       Padding="30,20"
+                                       VerticalOptions="Center" />
+                            </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
     </ScrollView>
-    
 </ContentPage>
