--- a/Cinestar-app/Filmovi.xaml
+++ b/Cinestar-app/Filmovi.xaml
@@ -1,51 +1,38 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="Cinestar_app.Filmovi"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Cinestar_app"
-             x:DataType="local:Filmovi"
-             Title="Filmovi">
+             x:Class="Cinestar_app.Filmovi"
+             Title="">
+    <ScrollView>
+        <StackLayout BackgroundColor="#051851" Padding="20">
+            <Label Text="Filmovi" 
+                   TextColor="White"
+                   FontSize="24"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Center" />
 
-    <RefreshView x:Name="RefreshView1" IsRefreshing="{Binding IsRefreshing}">
-        <CollectionView x:Name="FilmoviList" 
-                        ItemsSource="{Binding Movies}"
-                        RemainingItemsThreshold="3">
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="local:Movie">
-                    <SwipeView>
-                        <Grid Padding="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-
-                            <Border Grid.Column="0" 
-                                    Stroke="#E0E0E0" 
-                                    StrokeThickness="1" 
-                                    Padding="10">
-                                <Grid>
-                                    <Image Source="{Binding Poster}"
-                                           Aspect="AspectFill"
-                                           HeightRequest="120"/>
-                                    <Label Text="{Binding Title}"
-                                           VerticalOptions="End"
-                                           BackgroundColor="Black"
-                                           TextColor="White"
-                                           FontSize="12"/>
-                                </Grid>
-                            </Border>
-
-                            <Button Grid.Column="1" 
-                                    Text="Detalji"
-                                    CommandParameter="{Binding .}"
-                                    Clicked="IdiNaFIlmDetalji"
-                                    BackgroundColor="#051851"
-                                    TextColor="White"
-                                    Margin="5,0,0,0"/>
-                        </Grid>
-                    </SwipeView>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </RefreshView>
+            <CollectionView x:Name="FilmoviCollection" BackgroundColor="Transparent">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame BackgroundColor="LightGray" Margin="5" Padding="10" HeightRequest="120">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="0" Source="{Binding Poster}" Aspect="AspectFill"/>
+                                <StackLayout Grid.Column="1" VerticalOptions="Center" Margin="10,0,0,0">
+                                    <Label Text="{Binding Title}" FontAttributes="Bold" TextColor="Black"/>
+                                    <Button Text="Detalji" 
+                                            CommandParameter="{Binding .}"
+                                            Clicked="IdiNaFIlmDetalji"
+                                            BackgroundColor="#051851"
+                                            TextColor="White"/>
+                                </StackLayout>
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
