--- a/Cinestar-app/MainTabbedPage.xaml
+++ b/Cinestar-app/MainTabbedPage.xaml
@@ -4,15 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Cinestar_app"
     xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
-    x:Class="Cinestar_app.Pages.MainTabbedPage"
+    x:Class="Cinestar_app.MainTabbedPage"
     android:TabbedPage.ToolbarPlacement="Bottom"
-     BarBackgroundColor="#051851"        
-    BarTextColor="White"  
-    
-    >
+    BarBackgroundColor="#051851"        
+    BarTextColor="White">
 
     <TabbedPage.Children>
-        <NavigationPage Title="Pocetna"  IconImageSource="home.png">
+        <NavigationPage Title="Početna" IconImageSource="home.png">
             <x:Arguments>
                 <local:HomePage />
             </x:Arguments>
@@ -23,6 +21,11 @@
                 <local:Filmovi />
             </x:Arguments>
         </NavigationPage>
-    </TabbedPage.Children>
 
+        <NavigationPage Title="Profil" IconImageSource="profil.png">
+            <x:Arguments>
+                <local:Profil />
+            </x:Arguments>
+        </NavigationPage>
+    </TabbedPage.Children>
 </TabbedPage>
